# cplusplus17.Examples

./: CMakeLists.txt  README.md
examples/: README.md
examples/SDL/: sdl-test.cpp
examples/ScanLex/: Makefile  add_two.mxvm  backend_func.cpp  backend_func.hpp  backend_icode.cpp  backend_icode.hpp  main.cpp  parser.cpp  parser.hpp  parser_ast.cpp  parser_ast.hpp  parser_exception.cpp  parser_exception.hpp  scan_crunch.cpp  scan_crunch.hpp  scan_exception.cpp  scan_exception.hpp  scan_html.cpp  scan_html.hpp  scan_lex.cpp  scan_lex.hpp  scan_symbol.cpp  scan_symbol.hpp  scan_token.cpp  scan_token.hpp  script.txt  test.txt
examples/ac-tool/: Makefile  Makefile.mingw  ac-tool.cpp  cmd-switch.hpp
examples/acidcam_plugin/: Makefile  filter  filter.cpp
examples/bin_tree/: Makefile  main.cpp  tree.hpp
examples/c-style/: Makefile  c-style.cpp
examples/cmake/: CMakeLists.txt  test.cpp
examples/cmd-switch/: CMakeLists.txt  README.md
examples/cmd-switch/source/: cmd-switch.cpp  cmd-switch.hpp  print-lines-test.cpp  switch-test.cpp
examples/count_lines/: Makefile  README.md  count_lines.cpp  output.txt
examples/cv-stereo-cam/: Makefile  main.cpp
examples/cv_ex/: Makefile  main.cpp
examples/diamond/: Makefile  dmd.hpp  main.cpp
examples/expand_tabs/: cmd-switch.hpp  main.cpp
examples/expand_tabs_stdin/: Makefile  cmd-switch.cpp  cmd-switch.hpp  main.cpp
examples/file/: file.cpp
examples/filter/: Makefile  filter.cpp  filter.hpp  main.cpp
examples/filter_design/: ac_filter.cpp  ac_filter.hpp  main.cpp  selfalpha.cpp  selfalpha.hpp
examples/filter_design_02/: Makefile  ac-filterlist.cpp  ac-filterlist.hpp  ac-filterobj.cpp  ac-filterobj.hpp  main.cpp
examples/fstream_binary_test/: Makefile  README.md  file.cpp
examples/hash/: Makefile  hash.cpp  hash.hpp
examples/img_convert/: Makefile  README.md  cmd-switch.hpp  img_convert.cpp
examples/julia/: Makefile  README.md  julia.cpp
examples/karma/: Makefile  karma.cpp
examples/karma_trail/: Makefile  karma-trail  karma-trail.cpp
examples/libacidcam/: Makefile  main.cpp
examples/linescroll/: Makefile  linescroll.cpp
examples/linked_list/: Makefile.clang  Makefile.clang9  linked.hpp  main.cpp
examples/list2cpp/: Makefile  README.md  list2cpp  list2cpp.cpp  list2cpp.hpp  main.cpp  output.hpp
examples/mandelbrot/: Makefile  README.md  mandelbrot.cpp
examples/per_karma_trail/: README.txt  karma-trail.cpp
examples/per_temp/: Makefile  main.cpp  per.cpp  per.hpp
examples/persist_map/: Makefile.clang  Makefile.clang9  permap.hpp  persist_concat.cpp  persist_map.cpp  persist_map_int.cpp  persist_string.cpp  persist_struct.cpp
examples/printlines/: CMakeLists.txt  printlines.cpp
examples/printlines_stdin/: printlines.cpp
examples/qt/: main.cpp  qt.pro
examples/quine/: Makefile  quine.cpp  value.cpp  value.h
examples/regex/: Makefile  r.cpp
examples/remember_words_qt/: README.md  main.cpp  main_window.cpp  main_window.h  moc_main_window.cpp  moc_predefs.h  remember_words_qt.pro
examples/replace/: Makefile  cmd-switch.cpp  replace.cpp
examples/set/: Makefile  set.cpp
examples/shell_cmd/: CMakeLists.txt  Makefile  README.md  cmd-switch.hpp  cmd.cpp
examples/show_lines/: Makefile  show_lines.cpp
examples/shuffle_list/: Makefile  README.md  shuffle_list.cpp
examples/sort/: Makefile  sort.cpp
examples/stack/: Makefile  main.cpp  stack.hpp
examples/staticinitfree/: Makefile  main.cpp  staticif.hpp
examples/stdin_to_bin/: Makefile  cmd-switch.cpp  cmd-switch.hpp  stdin_to_bin.cpp
examples/stopwatch/: Makefile  main.cpp  stopwatch.hpp
examples/strategy/: Makefile  camera.cpp  camera.hpp  game.cpp  game.hpp  game_level.cpp  game_level.hpp  level.cpp  level.hpp  main.cpp  window.cpp  window.hpp  window_const.hpp
examples/string_func/: Makefile  string.cpp
examples/string_list/: Makefile  list.hpp  main.cpp
examples/symbol_table/: Makefile  main.cpp  table.hpp  tree.hpp
examples/tab_space_swap/: Makefile  README.md  tabs2space.cpp
examples/transform/: Makefile  transform.cpp
examples/tree/: Makefile  tree.cpp
examples/ucase_stdin/: Makefile  stdin_stdout.cpp
examples/url_download/: Makefile.clang  README.md  download.cpp  socket.cpp  socket.hpp
examples/variadic_read_write/: Makefile.clang  main.cpp  rw.hpp
examples/variant/: Makefile  var-ex.cpp
examples/word_count/: Makefile  README.md  word_count.cpp
features/: README.md
features/any/: any.cpp
features/attributes/: Makefile  no-discard.cpp
features/auto/: Makefile  Makefile.clang  Makefile.clang9  auto.cpp  decltype.cpp  lambda.cpp
features/compile_time/: Makefile.clang  Makefile.clang9  arr_average.cpp  arr_sqrt.cpp  constexpr_if.cpp  constexpr_if2.cpp  constexpr_if3.cpp  even_odd.cpp  parse_int.cpp  prime_test.cpp  primen.cpp
features/fold/: Makefile  fold.cpp
features/function/: func_test.cpp  function-ch.cpp  functor.cpp
features/functional/: function-ch.cpp  immutable.cpp  pure-func.cpp
features/getter/: Makefile  getter.cpp
features/hexadecimal-float/: Makefile  Makefile.clang  hex_float.cpp
features/if_switch_variable_scope/: Makefile  Makefile.clang  Makefile.clang9  program.cpp  scope.cpp
features/inheritance/: temp_inherit.cpp  variadic_inherit.cpp
features/inline_variables/: Makefile  Makefile.clang  README.md  header_only.hpp  main.cpp  point.cpp  point.hpp
features/invoke/: Makefile  Makefile.clang  Makefile.clang9  invoke_test.cpp
features/move/: Makefile  move.cpp
features/nested_namespace_def/: Makefile  Makefile.clang  nested_namespace.cpp  nested_namespace.hpp
features/optional/: Makefile  op.cpp
features/parallel/: Makefile  par.cpp
features/policy_and_traits/: add_values.cpp  detecttype.cpp  error_int.cpp  hasdefault.cpp  isdefaulttype.cpp  isoftype.cpp
features/polymorphism/: dynamic-poly.cpp  static-poly.cpp
features/string/: Makefile  string-test.cpp
features/string_view/: Makefile  sv.cpp
features/structured_bindings/: Makefile  Makefile.clang  sb.cpp
features/template/: Makefile.clang  Makefile.clang9  array_cast.cpp  databyte.cpp  (+6 more)
(+47 files in other folders)
